# UtopiaOS

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  config.cmake
Platform/: UtopiaOS
modules/: CMakeLists.txt  memory_resource
modules/common/: memory.hpp  types.hpp
modules/environment/: environment.hpp  memory.hpp
modules/kernel/: CMakeLists.txt  assert.hpp  atomic.hpp  constants.hpp  debug.hpp  dynarray.hpp  kernel_main.cpp  kernel_main.hpp  logger.hpp  memory_manager.hpp  memory_map.hpp  trap.hpp  types.hpp
modules/virtualizer/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  memory_resource  new
src/UEFI/: CMakeLists.txt  config.cmake  memory.hpp  project_config.cmake
src/common/: memory.hpp
src/environment/: CMakeLists.txt  UEFIMemory.hpp  config.cmake  environment.hpp  project_config.cmake
src/io/: CMakeLists.txt  config.cmake  logger.cpp  logger.hpp  project_config.cmake  string.hpp
src/kernel/: CMakeLists.txt  assert.hpp  buddy_resource.cpp  buddy_resource.hpp  config.cmake  constants.hpp  distributed_resource.hpp  dynarray.hpp  kernel_main.cpp  kernel_main.hpp  logger.hpp  memory_manager.hpp  memory_map.hpp  project_config.cmake  trap.hpp
src/utils/: CMakeLists.txt  array.hpp  assert.hpp  bitwise.hpp  config.cmake  constructor.hpp  debug.hpp  destruct_deleter.hpp  dynarray.hpp  make_array.hpp  project_config.cmake  ranges.hpp  trap.hpp
